--- a/pos.css
+++ b/pos.css
@@ -1,9 +1,10 @@
+
 /* pos.css */
 
 body, html {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'GrandHeavy', Arial, sans-serif;
   background-color: #f9f9f9;
   height: 100%;
 }
